center navbar in < 640px screen

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -201,4 +201,9 @@ footer {
       font-size: xx-large !important;
       width: 300px;
     }
+    header nav ul {
+        text-align: center;
+        float: left;
+        margin-left: 20%;
+    }
   }
