--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -4,8 +4,13 @@
     padding: 0;
     margin: 0;
     outline-width: 0;
-    outline-color: white;
+    /* outline-color: white; */
 }
+
+body, html {
+    background-color: black !important;
+    }
+    
 
 header {
     height: 60px;
@@ -44,7 +49,7 @@ h2 {
     padding-bottom: 10px;
     margin-bottom: 20px;
     color: teal;
-    background-color: white;
+    background-color:tan;
     margin-top: 10px;
     margin-left: 20px;
     margin-right: 20px;
@@ -54,6 +59,10 @@ h2 {
     height: 70px;
 }
 
+section {
+
+    background-color: tan !important;
+}
 .wrapper {
     text-align: center;
     margin-left:10%;
@@ -66,7 +75,8 @@ h2 {
 }
 
 .sandyback {
-    background-image: url("../images/let-there-be-sun.png");
+    /* background-image: url("../images/let-there-be-sun.png"); */
+    /* background-color: grey; */
     border-top: 10px;
     border-color: black;
     padding-top: 10px;
@@ -124,11 +134,12 @@ section img {
     border-width: 0;
     border-style: none;
     border-color: white;
+    z-index: -10;
    
 }
 
 section p {
-    color: lightslategray;
+    color: black;
     line-height: 2;
     padding: 0 20px 0 20px;
 }
@@ -136,7 +147,7 @@ section p {
 section form {
     padding-left: 20px;
     padding-right: 20px;
-    color: lightslategray;
+    color:black;
 
 }
 
@@ -149,7 +160,7 @@ section form textarea {
 }
 
 section form label {
-    color: lightslategray;
+    color:black;
 }
 
 button {
