--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -62,6 +62,7 @@ h2 {
 section {
 
     background-color: tan !important;
+    /* top: 56px; */
 }
 .wrapper {
     text-align: center;
@@ -114,7 +115,7 @@ section {
     width: 80%;
     margin-left: 10%;
     margin-top: 80px;
-    margin-bottom: 60px;
+    margin-bottom: 40px;
     background-color: white;
     border-top: 10px;
     border-color: black;
@@ -134,7 +135,7 @@ section img {
     border-width: 0;
     border-style: none;
     border-color: white;
-    z-index: -10;
+    /* top: 50px; */
    
 }
 
