--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -66,9 +66,9 @@ section {
 }
 .wrapper {
     text-align: center;
-    margin-left:10%;
+    /* margin-left:10%;
     margin-right: 10%;
-    width: 80%;
+    width: 80%; */
 }
 
 .wrapper p {
@@ -115,6 +115,7 @@ section {
     width: 80%;
     margin-left: 10%;
     margin-top: 80px;
+    top: 80px;
     margin-bottom: 40px;
     background-color: white;
     border-top: 10px;
@@ -197,7 +198,7 @@ footer {
     border-top-width: 5px;
     border-top-style: solid;
     border-top-color: teal;
-    width: 80%;
+    width: 100%;
     background-color: grey;
     text-align: center;
  }
