--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -7,23 +7,11 @@
     /* outline-color: white; */
 }
 
-body, html {
+body, html, .jumbotron {
     background-color: black !important;
     }
     
 
-header {
-    height: 60px;
-}
-
-.stickyheader {
-    position: fixed;
-    left: 0;
-    top: 0;
-    margin-top: 0px;
-    padding-top: 0px;
-    background-color: white;
-}
 
 h1 {
     background-color: teal;
@@ -59,11 +47,6 @@ h2 {
     height: 70px;
 }
 
-section {
-
-    background-color: tan !important;
-    /* top: 56px; */
-}
 .wrapper {
     text-align: center;
     /* margin-left:10%;
@@ -94,7 +77,7 @@ header nav ul {
 header nav ul li {
     display: inline;
     padding-top: 20px;
-
+    
 }
 
 header nav ul li a {
@@ -111,21 +94,32 @@ header nav ul li a:hover {
     font-weight: bolder;
 }
 
+
+.jumbotron {
+    /* top: 86px;
+    margin-top: 60px; */
+    position: relative;
+}
+
 section {
+    background-color: tan !important;
     width: 80%;
     margin-left: 10%;
-    margin-top: 80px;
-    top: 80px;
-    margin-bottom: 40px;
-    background-color: white;
-    border-top: 10px;
+    position: relative;
+    /* margin-top: 86px; */
+    top: 30px;
+    /*margin-bottom: 40px;
+    /* background-color: white; */
+    /* border-top: 10px;  */
     border-color: black;
     overflow: hidden;
 }
 
 .portfoliocontactsection {
-    width: 60%;
-    margin-left: 20%;
+    /* top: 60px;
+    margin-top: 60px !important; */
+    /* width: 60%; */
+    /* margin-left: 20%; */
     text-align: left;
 }
 
