--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -13,6 +13,32 @@ body, html, .jumbotron {
     
 
 
+    @media only screen and (max-width: 940px) {
+        h1 {
+          font-size: smaller !important;
+        }
+        h2 {
+            font-size: 1rem;
+        }
+      }
+    
+     @media only screen and (max-width: 640px) {
+        h1 {
+          font-size: xx-large !important;
+          width: 300px;
+        }
+        h2 {
+            font-size: 1rem;
+        }
+        header nav ul {
+            text-align: center;
+            float: left;
+            margin-left: 20%;
+        }
+      }
+    
+
+
 h1 {
     background-color: teal;
     color: white;
@@ -196,21 +222,3 @@ footer {
     background-color: grey;
     text-align: center;
  }
-
- @media only screen and (max-width: 940px) {
-    h1 {
-      font-size: smaller !important;
-    }
-  }
-
- @media only screen and (max-width: 640px) {
-    h1 {
-      font-size: xx-large !important;
-      width: 300px;
-    }
-    header nav ul {
-        text-align: center;
-        float: left;
-        margin-left: 20%;
-    }
-  }
